tests/samples/negative/functions/function_prototype_variadic_mismatch.ax
module function_prototype_variadic_mismatch;

extern c {
    @name("printf")
    fn printf(format: *const u8, ...) -> i32;
}

fn printf(format: *const u8) -> i32;

fn main() -> i32 {
    return printf(c"value");
}
